Fix perfect scrollbar integration and style

--- a/assets/stylesheet/setting.less
+++ b/assets/stylesheet/setting.less
@@ -9,6 +9,12 @@
     padding-bottom      : 50px;
     height: 100%;
 
+    .ps-scrollbar-y-rail {
+        margin-top: 40px;
+        background: #000;
+        opacity: 1;
+    }
+
     .scroll {
         position: relative;
         overflow: hidden;
